--- a/src/main/resources/view/TaskListCard.fxml
+++ b/src/main/resources/view/TaskListCard.fxml
@@ -27,6 +27,7 @@
                                 <HBox>
                                     <Label fx:id="id" styleClass="cell_big_label"></Label>
                                     <Label fx:id="name" text="\$first" styleClass="cell_big_label"/>
+									<Label fx:id="details" text="\$first" styleClass="cell_big_label"/>
                                 </HBox>
                                 <Label fx:id="tags" styleClass="cell_small_label" text="\$tags" />
                             </children>
