--- a/src/main/resources/view/TaskListCard.fxml
+++ b/src/main/resources/view/TaskListCard.fxml
@@ -1,40 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import java.net.URL?>
-<HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-    <children>
-        <GridPane HBox.hgrow="ALWAYS" >
-            <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" prefWidth="100.0" />
-            </columnConstraints>
-            <children>
-                <VBox alignment="CENTER_LEFT" maxHeight="150.0" minHeight="40.0" prefHeight="40.0" GridPane.columnIndex="0">
-                    <stylesheets>
-                        <URL value="@DarkTheme.css" />
-                        <URL value="@Extensions.css" />
-                    </stylesheets>
-                    <padding>
-                        <Insets bottom="5" left="15" right="5" top="5" />
-                    </padding>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-                    <children>
-                        <HBox spacing="5" alignment="CENTER_LEFT">
-                            <children>
-                                <HBox>
-                                    <Label fx:id="id" styleClass="cell_big_label"></Label>
-                                    <Label fx:id="name" text="\$first" styleClass="cell_big_label"/>
-									<Label fx:id="details" text="\$first" styleClass="cell_big_label"/>
-                                </HBox>
-                                <Label fx:id="tags" styleClass="cell_small_label" text="\$tags" />
-                            </children>
-                        </HBox>
-                    </children>
-                </VBox>
-            </children>
-        </GridPane>
-    </children>
+<HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1">
+	<children>
+		<GridPane HBox.hgrow="ALWAYS">
+			<columnConstraints>
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
+				<ColumnConstraints halignment="RIGHT" hgrow="ALWAYS" maxWidth="400.0" minWidth="10.0" prefWidth="400.0" />
+			</columnConstraints>
+			<children>
+				<VBox alignment="CENTER_LEFT" maxHeight="150.0" minHeight="40.0" prefHeight="40.0" prefWidth="253.0" GridPane.columnIndex="0">
+					<stylesheets>
+						<URL value="@DarkTheme.css" />
+						<URL value="@Extensions.css" />
+					</stylesheets>
+					<padding>
+						<Insets bottom="5" left="15" right="5" top="5" />
+					</padding>
+
+					<children>
+						<HBox alignment="CENTER_LEFT" prefHeight="25.0" prefWidth="50.0" spacing="5">
+							<children>
+								<HBox>
+									<Label fx:id="id" styleClass="cell_big_label" />
+									<Label fx:id="name" styleClass="cell_big_label" text="\$name" />
+								</HBox>
+								<Label fx:id="tags" prefHeight="16.0" prefWidth="0.0" styleClass="cell_small_label" text="\$tags" />
+							</children>
+						</HBox>
+					</children>
+				</VBox>
+				<Label fx:id="details" alignment="CENTER_RIGHT" contentDisplay="RIGHT" styleClass="cell_big_label" text="\$details" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS">
+					<GridPane.margin>
+						<Insets right="10.0" />
+					</GridPane.margin>
+				</Label>
+			</children>
+			<rowConstraints>
+				<RowConstraints />
+			</rowConstraints>
+		</GridPane>
+	</children>
 </HBox>
