--- a/src/main/resources/view/TaskListCard.fxml
+++ b/src/main/resources/view/TaskListCard.fxml
@@ -23,7 +23,8 @@
       		<Label fx:id="id" styleClass="cell_big_label" text="\$id" />
       		<Label fx:id="name" minWidth="-Infinity" prefWidth="450.0" styleClass="cell_big_label" text="\$name" GridPane.columnIndex="1" />
       		<Label fx:id="tags" styleClass="cell_small_label" text="\$tags" GridPane.columnIndex="2" />
-      		<Label fx:id="details" minWidth="-Infinity" prefWidth="300.0" styleClass="cell_big_label" text="\$details" textAlignment="RIGHT" GridPane.columnIndex="3" GridPane.halignment="RIGHT" />
+			<Label fx:id="reminderDate" minWidth="-Infinity" prefWidth="300.0" styleClass="cell_big_label" text="\$reminderDate" textAlignment="RIGHT" GridPane.columnIndex="3" GridPane.halignment="RIGHT" />
+      		<Label fx:id="details" minWidth="-Infinity" prefWidth="300.0" styleClass="cell_big_label" text="\$details" textAlignment="RIGHT" GridPane.columnIndex="4" GridPane.halignment="RIGHT" />
          </children>
       </GridPane>
 	</children>
