--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -4,9 +4,8 @@
 
 .label {
     -fx-font-size: 11pt;
-    -fx-font-family: "Segoe UI Semibold";
-    -fx-text-fill: #555555;
-    -fx-opacity: 0.9;
+    -fx-font-family: "Calibri";
+    -fx-text-fill: white;
 }
 
 .label-bright {
@@ -76,28 +75,28 @@
 }
 
 .split-pane:horizontal .split-pane-divider {
-    -fx-border-color: transparent #1d1d1d transparent #1d1d1d;
+    -fx-border-color: #37474F;
     -fx-background-color: transparent, #37474F;
 }
 
 .split-pane {
-    -fx-border-radius: 1;
-    -fx-border-width: 1;
     -fx-background-color: #37474F;
 }
 
 .list-cell {
+	-fx-background-color: #37474F;
     -fx-label-padding: 0 0 0 0;
     -fx-graphic-text-gap : 0;
     -fx-padding: 0 0 0 0;
 }
 
 .list-cell .label {
-    -fx-text-fill: #010504;
+    -fx-text-fill: white;
+    -fx-font-style: Bold;
 }
 
 .cell_big_label {
-    -fx-font-size: 16px;
+    -fx-font-size: 18px;
     -fx-text-fill: #010504;
 }
 
@@ -112,8 +111,7 @@
 
 .anchor-pane-with-border {
      -fx-background-color: #37474F;
-     -fx-border-color: derive(#1d1d1d, 10%);
-     -fx-border-top-width: 1px;
+     -fx-border-color: #37474F;
 }
 
 .status-bar {
@@ -134,8 +132,7 @@
 }
 
 .status-bar-with-border {
-    -fx-background-color: derive(#1d1d1d, 30%);
-    -fx-border-color: derive(#1d1d1d, 25%);
+    -fx-background-color: #37474F;
     -fx-border-width: 1px;
 }
 
@@ -145,7 +142,7 @@
 
 .grid-pane {
     -fx-background-color: #37474F;
-    -fx-border-color: derive(#1d1d1d, 30%);
+    -fx-border-color: #37474F;
     -fx-border-width: 1px;
 }
 
@@ -273,7 +270,7 @@
 
 #cardPane {
     -fx-background-color: transparent;
-    -fx-border-color: #d6d6d6;
+    -fx-border-color:#37474F;
     -fx-border-width: 1 1 1 1;
 }
 
