--- a/src/main/resources/view/TaskListCard.fxml
+++ b/src/main/resources/view/TaskListCard.fxml
@@ -1,48 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <!-- @@author A0141780J -->
+
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.shape.Rectangle?>
 
-<HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/8.0.60"
-	xmlns:fx="http://javafx.com/fxml/1">
+<HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1">
 	<children>
 
 		<GridPane HBox.hgrow="ALWAYS">
 			<columnConstraints>
-				<ColumnConstraints hgrow="NEVER" maxWidth="80.0"
-					minWidth="30.0" prefWidth="80.0" />
-				<ColumnConstraints hgrow="NEVER" minWidth="10.0"
-					prefWidth="450.0" />
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="96.0"
-					minWidth="10.0" prefWidth="57.0" />
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="187.0"
-					minWidth="10.0" prefWidth="143.0" />
+            <ColumnConstraints hgrow="NEVER" maxWidth="80.0" minWidth="12.0" prefWidth="16.0" />
+				<ColumnConstraints hgrow="NEVER" maxWidth="148.0" minWidth="30.0" prefWidth="70.0" />
+				<ColumnConstraints hgrow="NEVER" maxWidth="450.0" minWidth="450.0" prefWidth="450.0" />
+				<ColumnConstraints hgrow="NEVER" maxWidth="96.0" minWidth="10.0" prefWidth="57.0" />
+				<ColumnConstraints hgrow="NEVER" maxWidth="300.0" minWidth="10.0" prefWidth="300.0" />
+            <ColumnConstraints />
 			</columnConstraints>
 			<rowConstraints>
-				<RowConstraints minHeight="10.0" prefHeight="30.0"
-					vgrow="SOMETIMES" />
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
 			</rowConstraints>
 			<children>
-				<Label fx:id="id" styleClass="cell_big_label" text="\$id" />
-				<Label fx:id="name" minWidth="-Infinity" prefWidth="450.0"
-					styleClass="cell_big_label" text="\$name" GridPane.columnIndex="1" />
-				<Label fx:id="tags" styleClass="cell_small_label" text="\$tags"
-					GridPane.columnIndex="2" />
-				<Label fx:id="reminderDate" minWidth="-Infinity" prefWidth="300.0" 
-					styleClass="cell_big_label" text="\$reminderDate" textAlignment="RIGHT" 
-					GridPane.columnIndex="3" GridPane.halignment="RIGHT" />
+				<Label fx:id="id" styleClass="cell_big_label" text="\$id" GridPane.columnIndex="1">
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin></Label>
+				<Label fx:id="name" maxWidth="400.0" minWidth="200.0" prefWidth="400.0" styleClass="cell_big_label" text="\$name" GridPane.columnIndex="2" />
+				<Label fx:id="tags" styleClass="cell_small_label" text="\$tags" GridPane.columnIndex="3" />
+				<Label fx:id="reminderDate" minWidth="-Infinity" prefHeight="21.0" prefWidth="356.0" styleClass="cell_big_label" text="\$reminderDate" GridPane.columnIndex="4" GridPane.halignment="RIGHT" />
 					
-				<Label fx:id="details" minWidth="-Infinity" prefWidth="300.0"
-					styleClass="cell_big_label" text="\$details" textAlignment="RIGHT"
-					GridPane.columnIndex="4" GridPane.halignment="RIGHT" />
+				<Label fx:id="details" minWidth="-Infinity" prefWidth="500.0" styleClass="cell_big_label" text="\$details" GridPane.columnIndex="5" GridPane.halignment="RIGHT" />
+            <Rectangle fx:id="colorTag" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="50.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="15.0" GridPane.vgrow="ALWAYS" />
 			</children>
 		</GridPane>
 	</children>
 	<padding>
-		<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+		<Insets bottom="10.0" right="10.0" top="10.0" />
 	</padding>
 </HBox>
