Add Status Display Pane that updates when filters are updated

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -146,6 +146,10 @@
     -fx-text-fill: white;
 }
 
+.status-display-pane {
+    -fx-background-color: #37474F;
+}
+
 .grid-pane {
     -fx-background-color: #37474F;
     -fx-border-color: #37474F;
