--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <!-- @@author A0141780J -->
+
 <?import java.net.URL?>
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
@@ -37,20 +37,11 @@
 				</Menu>
 			</menus>
 		</MenuBar>
-		<SplitPane id="splitPane" fx:id="splitPane" VBox.vgrow="ALWAYS">
-			<items>
-				<VBox fx:id="taskList" minWidth="340" prefWidth="340"
-					prefHeight="250">
-					<children>
-						<AnchorPane fx:id="taskListPanelPlaceholder"
-							VBox.vgrow="ALWAYS" />
-					</children>
-				</VBox>
-			</items>
-		</SplitPane>
+		<AnchorPane fx:id="taskListPanelPlaceholder" VBox.vgrow="ALWAYS" />
+		<AnchorPane fx:id="statusDisplayPanelPlaceholder"
+			maxHeight="60.0" minHeight="60.0" prefHeight="60.0" VBox.vgrow="NEVER" />
 		<AnchorPane fx:id="commandBoxPlaceholder" styleClass="anchor-pane-with-border"
-			VBox.vgrow="NEVER">
-		</AnchorPane>
+			VBox.vgrow="NEVER" />
 		<AnchorPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
 	</children>
 </VBox>
