--- a/src/main/resources/view/StatusDisplayPanel.fxml
+++ b/src/main/resources/view/StatusDisplayPanel.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-
+/* @@author A0141780J */
 <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="60.0" minWidth="-Infinity" prefHeight="60.0" prefWidth="720.0" styleClass="status-display-pane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="taskle.ui.StatusDisplayPanel">
 	<stylesheets>
 		<URL value="@DarkTheme.css" />
